--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "electron-squirrel-startup": "^1.0.0",
+    "fs-extra": "^11.1.1",
+    "path-browserify": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -41,6 +43,7 @@
     "@electron-forge/maker-squirrel": "^6.2.1",
     "@electron-forge/maker-zip": "^6.2.1",
     "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
+    "@types/electron": "^1.6.10",
     "@types/jasmine": "~4.3.0",
     "electron": "^25.2.0",
     "jasmine-core": "~4.6.0",
